administrator only css and scripts extracted and included only in admin interface

--- a/main/apps/news/admin/templates/news/admin/post_edit.html
+++ b/main/apps/news/admin/templates/news/admin/post_edit.html
@@ -2,6 +2,10 @@
 # import 'macro/forms.html' as forms
 
 # block scripts
+  # if config.DEVELOPMENT
+  # else
+    <script src="/p/min/script/admin.min.js?{{config.CURRENT_VERSION_ID}}"></script>
+  # endif
     <script>
         $(function(){
             $('.redactor').redactor({
