--- a/main/templates/bit/script.html
+++ b/main/templates/bit/script.html
@@ -4,7 +4,9 @@
       <script src="/p/{{script.replace('.coffee', '.js').replace('src/script/', 'dst/script/')}}?{{config.CURRENT_VERSION_ID}}"></script>
     # endfor
   # else
-    <script src="/p/min/script/{{module}}.min.js?{{config.CURRENT_VERSION_ID}}"></script>
+    #if module.find('admin') < 0
+       <script src="/p/min/script/{{module}}.min.js?{{config.CURRENT_VERSION_ID}}"></script>
+    # endif
   # endif
 # endfor
 
