--- a/main/templates/bit/style.html
+++ b/main/templates/bit/style.html
@@ -6,6 +6,8 @@
   # else
     {% set link = style.replace('.less', '.min.css').replace('src/style/', 'min/style/') %}
   # endif
-  <link rel="stylesheet" type="text/css" href="/p/{{ link }}?{{config.CURRENT_VERSION_ID}}">
+  # if link.find('adminstyle') < 0
+    <link rel="stylesheet" type="text/css" href="/p/{{ link }}?{{config.CURRENT_VERSION_ID}}">
+  # endif
 # endfor
 {% endstrip %}
