Revert "blog refactoring: some blog logic moved to coffee script file"
This reverts commit f81bbccefc598ea443542f1a681036a1a84bde6c.

--- a/main/apps/news/templates/news/index.html
+++ b/main/apps/news/templates/news/index.html
@@ -20,11 +20,24 @@
     vm.titleExt("тут я пишу");
 
     window.LoadBlog = function(query, tExt) {
-        vm.loadBlog(query, tExt);
+        vm.getPostsUsingQuery(query, false);
+        if(tExt){
+            vm.titleExt(tExt)
+        }
     };
 
     $( document ).ready(function() {
-        vm.setEventHandlers();
+        if(window.location.hash) {
+            var href = window.location.hash;
+            var vars = href.split('&');
+            vars.forEach(function (v) {
+                var pair = v.split('=');
+                if(pair[0] == '#tag') {
+                    var e = $.Event("click");
+                    $('#t_' + pair[1]).trigger(e);
+                }
+            });
+        }
     });
 
 </script>
