angular implementation of search draft

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -32,7 +32,9 @@
     # include 'bit/analytics.html'
   </head>
 {% endstrip %}
-  <body>
+    # block bodyTag
+        <body>
+    # endblock
 <!--noindex-->
     # block topnav
         # include 'bit/header.html'
