--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="{% block html_class %}{{html_class}}{% endblock %}" lang="ru" ng-app="egoroffApp">
+<html class="{% block html_class %}{{html_class}}{% endblock %}" lang="ru">
 {% strip %}
   <head>
     <meta charset="utf-8">
