--- a/main/templates/search.html
+++ b/main/templates/search.html
@@ -50,17 +50,12 @@
     ko.applyBindings(m);
 
     function runSearch(params) {
-        searchquery = {
+        var query = {
             "q" : $( "#q" ).val(),
             "key" : "{{ search.key }}",
             "cx" : "{{ search.cx }}"
         };
-        if(params) {
-            for (var attrname in params) {
-                searchquery[attrname] = params[attrname];
-            }
-        }
-        m.dosearch('{{ action_uri }}', searchquery);
+        m.dosearch('{{ action_uri }}', query, params);
     }
 
     $( "#q").keypress(function(e) {
