--- a/main/templates/search.html
+++ b/main/templates/search.html
@@ -50,12 +50,17 @@
     ko.applyBindings(m);
 
     function runSearch(params) {
-        var query = {
+        searchquery = {
             "q" : $( "#q" ).val(),
             "key" : "{{ search.key }}",
             "cx" : "{{ search.cx }}"
         };
-        m.dosearch('{{ action_uri }}', query, params);
+        if(params) {
+            for (var attrname in params) {
+                searchquery[attrname] = params[attrname];
+            }
+        }
+        m.dosearch('{{ action_uri }}', searchquery);
     }
 
     $( "#q").keypress(function(e) {
