--- a/templates/bit/top_nav.html
+++ b/templates/bit/top_nav.html
@@ -1,9 +1,8 @@
-{% strip %}
+
 {% for item in sections %}
-    <li {% if item["id"] == current_id %}class="active"{% endif %}>
-        <a href={{ url_for(item['id']) }}>&nbsp;{% if item["class"] %}<i class="{{ item["class"] }}"></i>&nbsp;{% endif %}
-            {{ item['title'] }}
-        </a>
+    <li class="active">
+
+            {{ item }}
+
     </li>
 {% endfor %}
-{% endstrip %}
