--- a/templates/bit/analytics.html
+++ b/templates/bit/analytics.html
@@ -1,4 +1,4 @@
-# if not current_user.admin and config.CONFIG_DB.analytics_id
+{% if not current_user.admin and config.CONFIG_DB.analytics_id %}
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -10,4 +10,4 @@
       ga('send', 'pageview');
 
     </script>
-# endif
+{% endif %}
