--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,12 +1,11 @@
-# extends 'base.html'
+{% extends 'base.html' %}
 
-# block meta
+{% block meta %}
     <meta name="google-site-verification" content="PHs3gMRw0_sIAdVqjk38_fbq9h3VGHkkIq3w1chJXWs"/>
     <meta name='yandex-verification' content='4c9a9332153bb06f' />
-# endblock
+{% endblock %}
 
-# block content
-{% strip %}
+{% block content %}
 
 <div class="page-header">
     <h1>
@@ -25,7 +24,7 @@
         {% if posts %}
             <dl itemscope itemtype="http://schema.org/BlogPosting" id="log">
                 {% for post in posts %}
-                    {% include 'news/post_box.html' %}
+                    {{ post.Title }}
                 {% endfor %}
             </dl>
         {% else %}
@@ -34,9 +33,8 @@
     </div>
     <div class="col-lg-6">
         <h2>Про апачей</h2>
-        {% include 'portfolio/apache_documents_list.html' %}
+
     </div>
 </div>
 
-{% endstrip %}
-# endblock
+{% endblock %}
