--- a/templates/apache.html
+++ b/templates/apache.html
@@ -1,12 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-{{ content | safe }}
+{% block content %}
 
-</body>
-</html>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            {{ content | safe }}
+            <p>
+                {% include 'bit/disqus.html' %}
+            </p>
+        </div>
+    </div>
+</div>
+{% endblock %}
