--- a/templates/bit/analytics.html
+++ b/templates/bit/analytics.html
@@ -1,11 +1,11 @@
-{% if not current_user.admin and config.CONFIG_DB.analytics_id %}
+{% if not current_user.admin and config.analytics_id %}
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', '{{config.CONFIG_DB.analytics_id}}', 'egoroff.spb.ru');
+      ga('create', '{{config.analytics_id}}', 'egoroff.spb.ru');
       ga('require', 'linkid', 'linkid.js');
       ga('send', 'pageview');
 
