--- a/templates/bit/header.html
+++ b/templates/bit/header.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-       <a class="navbar-brand" href="{{url_for('welcome')}}">{{config.brand_name}}</a>
+       <a class="navbar-brand" href="{{url_for('welcome')}}">{{config.BrandName}}</a>
     </div>
     <nav class="collapse navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">
