apache docs displaying

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -33,7 +33,7 @@
     </div>
     <div class="col-lg-6">
         <h2>Про апачей</h2>
-
+        {% include 'portfolio/apache_documents_list.html' %}
     </div>
 </div>
 
