--- a/static/src/style/base.less
+++ b/static/src/style/base.less
@@ -1,7 +1,7 @@
 body {
 
   > .container {
-    padding-top: floor(@line-height-computed / 4);
+    padding-top: (@line-height-computed / 4);
     padding-bottom: (@line-height-computed);
   }
 }
