--- a/templates/base.html
+++ b/templates/base.html
@@ -16,10 +16,10 @@
       {% endblock %}
     <title>
         {% block title %}
-        {{ title + ' |' }}
-        {{ current_title + ' |' }}
+        {% if title %} {{ title + ' |' }} {% endif %}
+        {% if current_title %} {{ current_title + ' |' }} {% endif %}
         {% endblock %}
-      {{config.CONFIG_DB.brand_name}}
+      {{config.BrandName}}
     </title>
     <link href="{{ url_for('news.recent_feed') }}"
       rel="alternate"
