--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
         {% endblock %}
       {{config.BrandName}}
     </title>
-    <link href="{{ url_for('news.recent_feed') }}"
+    <link href="/blog/recent.atom"
       rel="alternate"
       title="Recent Posts"
       type="application/atom+xml">
