--- a/templates/blog/post_box.html
+++ b/templates/blog/post_box.html
@@ -1,5 +1,5 @@
 
-    <dt><small><i class="icon-calendar"></i>&nbsp;<span itemprop="datePublished" class="shortDateFormat">{{ post.Created }}</span></small>&nbsp;
+    <dt><small><i class="icon-calendar"></i>&nbsp;<span itemprop="datePublished" class="shortDateFormat">{{ post.Created.Format("2006-01-02 15:04:05") }}</span></small>&nbsp;
         <a itemprop="url" href="/blog/{{ post.Key.ID }}.html"><span itemprop="name">{{ post.Title }}</span></a>
     </dt>
     <dd itemprop="description">{{ post.ShortText | safe }}</dd>
