--- a/templates/bit/script.html
+++ b/templates/bit/script.html
@@ -9,4 +9,5 @@
 {%  endif %}
 {%  endif %}
 {%  endfor %}
-
+<script src="/p/min/script/libs.min.js?{{current_version_id}}"></script>
+<script src="/p/min/script/scripts.min.js?{{current_version_id}}"></script>
