--- a/templates/bit/announcement.html
+++ b/templates/bit/announcement.html
@@ -1,8 +1,8 @@
-{% if config.announcement_html %}
-  <div class="alert-{{config.announcement_type}}">
+{% if ctx.conf.AnnouncementHtml %}
+  <div class="alert-{{ctx.conf.AnnouncementType}}">
     <div class="container alert alert-dismissable alert-announcement">
       <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-      {{config.announcement_html|safe}}
+      {{ctx.conf.AnnouncementHtml|safe}}
     </div>
   </div>
 {% endif %}
