--- a/templates/bit/style.html
+++ b/templates/bit/style.html
@@ -1,6 +1,6 @@
 
     <link href='http://fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic,700italic|Open+Sans:700,400&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-{% for style in styles %}
-    <link rel="stylesheet" type="text/css" href="/p/{{ style }}?{{current_version_id}}">
+{% for style in ctx.styles %}
+    <link rel="stylesheet" type="text/css" href="/p/{{ style }}?{{ctx.currentVersion}}">
 {% endfor %}
 
