--- a/templates/bit/breadcrumbs.html
+++ b/templates/bit/breadcrumbs.html
@@ -5,14 +5,14 @@
         <div class="col-lg-12">
             <ol class="breadcrumb">
                 {% block breadcrumbs %}
-                    {% for item in breadcrumbs %}
-                        <li>
-
-                        </li>
-                    {% endfor %}
-                    <li class="active">
-                        {{ title }}
-                    </li>
+                {% for item in breadcrumbs %}
+                <li>
+                    <a href="{{item.Id}}">{% if item.Class %}<i class="{{ item.Class }}"></i>&nbsp;{% endif %}{{ item.Title }}</a>
+                </li>
+                {% endfor %}
+                <li class="active">
+                    {{ title }}
+                </li>
                 {% endblock %}
             </ol>
         </div>
