--- a/templates/bit/top_nav.html
+++ b/templates/bit/top_nav.html
@@ -1,6 +1,6 @@
 {% for item in sections %}
 <li>
-<a href="/{{ item.Id }}/">&nbsp;{% if item.Class %}<i class="{{ item.Class }}"></i>&nbsp;{% endif %}
+<a href="{{ ctx.PathFor(item.Id) }}">&nbsp;{% if item.Class %}<i class="{{ item.Class }}"></i>&nbsp;{% endif %}
 {{ item.Title }}
 </a>
 </li>
