--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -20,7 +20,7 @@
 
 <div class="row">
     <div class="col-lg-6">
-        <h2><a href="{{ url_for('news.index') }}">Блог</a></h2>
+        <h2><a href="{{ ctx.PathFor('blog') }}">Блог</a></h2>
         {% if posts %}
             <dl itemscope itemtype="http://schema.org/BlogPosting" id="log">
                 {% for post in posts %}
