--- a/templates/search.html
+++ b/templates/search.html
@@ -1,4 +1,4 @@
-{% extends 'base.html'
+{% extends 'base.html' %}
 
 {% block content %}
 
@@ -49,8 +49,8 @@
     function runSearch(params) {
         searchquery = {
             "q" : $( "#q" ).val(),
-            "key" : "{{ search.key }}",
-            "cx" : "{{ search.cx }}"
+            "key" : "{{ search.Key }}",
+            "cx" : "{{ search.Cx }}"
         };
         if(params) {
             for (var attrname in params) {
