--- a/templates/blog/paginator.html
+++ b/templates/blog/paginator.html
@@ -10,36 +10,43 @@
     <ul class="pager">
         {% if poster.HasPrev() %}
             {% set li_class = "previous" %}
-            {% set href = ctx.PathFor('blog') + poster.PrevPage() + "/" + tag_query %}
+
+            {% if poster.PrevPage() == 1 %}
+                {% set href = tag_query %}
+            {% else %}
+                {% set href = poster.PrevPage() + "/" + tag_query %}
+            {% endif %}
         {% else %}
             {% set li_class = "disabled previous" %}
             {% set href = "#" %}
         {% endif %}
 
         <li class="{{ li_class }}">
-            <a href="{{ href }}"
-               class="prev">{{ newer | safe }}</a>
+            <a href="{{ctx.PathFor('blog')}}{{ href }}" class="prev">{{ newer | safe }}</a>
         </li>
 
         {% if poster.HasNext() %}
             {% set li_class = "next" %}
-            {% set href = ctx.PathFor('blog') + poster.NextPage() + "/" + tag_query %}
+            {% set href = poster.NextPage() + "/" + tag_query %}
         {% else %}
             {% set li_class = "next disabled" %}
             {% set href = "#" %}
         {% endif %}
 
         <li class="{{ li_class }}">
-            <a href="{{ href }}"
-               class="next">{{ older | safe }}</a>
+            <a href="{{ctx.PathFor('blog')}}{{ href }}" class="next">{{ older | safe }}</a>
         </li>
     </ul>
     <ul class="pagination pagination-sm">
         {% for page in poster.Pages() %}
             {% if page %}
                 <li {% if page == poster.Page() %} class="active" {% endif %}>
+                    {% if page == 1 %}
+                    <a href="{{ ctx.PathFor('blog') }}{{ tag_query }}" class="page">{{ page }}</a>
+                    {% else %}
                     <a href="{{ ctx.PathFor('blog') }}{{ page }}/{{ tag_query }}"
                        class="page">{{ page }}</a>
+                    {% endif %}
                 </li>
             {% else %}
                 ......
