--- a/templates/blog/blog_model.html
+++ b/templates/blog/blog_model.html
@@ -1,16 +1,16 @@
 <script id="blog" type="text/html">
     <dt>
         <small>
-            <i class="icon-calendar"></i> <span class="shortDateFormat" data-bind="text: created"></span>
+            <i class="icon-calendar"></i> <span class="shortDateFormat" data-bind="text: Created"></span>
         </small>&nbsp;
-        <!-- ko ifnot: id() == '{{ key_id }}' -->
-        <a data-bind="text: title, attr: { href: '{{ url_for('news.index') }}' + id() + '.html'  }"></a>
+        <!-- ko ifnot: id() == '{{ Key }}' -->
+        <a data-bind="text: Title, attr: { href: '{{ ctx.PathFor('blog') }}' + id() + '.html'  }"></a>
         <!-- /ko -->
-        <!-- ko if: id() == '{{ key_id }}' -->
-        <span data-bind="text: title"></span>
+        <!-- ko if: id() == '{{ Key }}' -->
+        <span data-bind="text: Title"></span>
         <!-- /ko -->
     </dt>
-    <dd data-bind="html: short_text"></dd>
+    <dd data-bind="html: ShortText"></dd>
 </script>
 
 <script id="morePosts" type="text/html">
