--- a/templates/blog/post.html
+++ b/templates/blog/post.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block meta %}
-{% if main_post.tags %}
+{% if main_post.Tags %}
     <meta name="keywords" content="{% for tag in main_post.tags %}{{ tag }}, {% endfor %}">
 {% endif %}
 {% endblock %}
@@ -15,23 +15,21 @@
 {% block content %}
     <div class="row">
         <div class="col-lg-12">
-            <p class="text-muted"><i class="fa fa-calendar"></i>&nbsp;<span class="date-from-now">{{ main_post.created }}</span></p>
+            <p class="text-muted"><i class="fa fa-calendar"></i>&nbsp;<span class="date-from-now">{{ main_post.Created.Format("2006-01-02 15:04:05") }}</span></p>
             {% if content %}
-                {{ content | typo | safe }}
+                {{ content | safe }}
             {% else %}
-                {{ main_post.short_text | typo | safe }}
+                {{ main_post.ShortText | safe }}
             {% endif %}
                 <div class="well well-sm">
-                    <i class="fa fa-calendar"></i> <span class="shortDateFormat">{{ main_post.created }}</span>&nbsp;
-                    {% if main_post.tags %}
-                        {% for tag in main_post.tags %}
-                           <a href="{{ url_for('news.index') }}#tag={{ tag }}" class="btn btn-default btn-sm">{{ tag }}</a>
+                    <i class="fa fa-calendar"></i> <span class="shortDateFormat">{{ main_post.Created.Format("2006-01-02 15:04:05") }}</span>&nbsp;
+                    {% if main_post.Tags %}
+                        {% for tag in main_post.Tags %}
+                           <a href="{{ ctx.PathFor('blog') }}#tag={{ tag }}" class="btn btn-default btn-sm">{{ tag }}</a>
                         {% endfor %}
                     {% endif %}
                     {% include '../bit/social.html' %}
                 </div>
-
-            {% include '../bit/disqus.html' %}
         </div>
     </div>
 {% endblock %}
