social buttons actualized

--- a/templates/bit/social.html
+++ b/templates/bit/social.html
@@ -1,2 +1,2 @@
 
-<span class="pluso pull-right" data-background="transparent" data-options="small,square,line,horizontal,counter,theme=06" data-services="facebook,twitter,vkontakte,linkedin,bookmark,google"></span>
+<span class="pluso pull-right" data-background="transparent" data-options="small,square,line,horizontal,counter,theme=06" data-services="facebook,twitter,vkontakte,linkedin"></span>
