--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="{% block html_class %}{{ctx.htmlClass}}{% endblock %}" lang="ru">
+<html class="{% block html_class %}{{html_class}}{% endblock %}" lang="ru">
   <head>
     <meta charset="utf-8">
     <meta name="apple-mobile-web-app-capable" content="yes">
