--- a/templates/bit/user_menu.html
+++ b/templates/bit/user_menu.html
@@ -18,6 +18,6 @@
   </li>
 {% else %}
   <li class="active">
-    <a href="{{url_for('signin')}}"><i class="fa fa-sign-in"></i> Войти</a>
+    <a href="/login"><i class="fa fa-sign-in"></i> Войти</a>
   </li>
 {% endif %}
