--- a/templates/bit/notifications.html
+++ b/templates/bit/notifications.html
@@ -1,3 +1,8 @@
 <div id="notifications">
-
+    {% for message in flashed_messages %}
+    <div class="alert alert-dismissable alert-{{message.Type}}">
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+        {{message.Text}}
+    </div>
+    {% endfor %}
 </div>
