--- a/templates/bit/analytics.html
+++ b/templates/bit/analytics.html
@@ -1,4 +1,4 @@
-{% if not current_user.admin and config.AnalyticsId %}
+{% if not current_user.Admin and config.AnalyticsId %}
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
