github buttons downloading using https

--- a/templates/bit/footer.html
+++ b/templates/bit/footer.html
@@ -2,8 +2,8 @@
 <footer class="footer" role="contentinfo">
   <div class="container">
     <div class="social github" data-repo="egoroff">
-      <iframe src="http://ghbtns.com/github-btn.html?user=aegoroff&repo=egoroff.spb.ru&type=follow&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="150" height="20"></iframe>
-      <iframe src="http://ghbtns.com/github-btn.html?user=aegoroff&repo=egoroff.spb.ru&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="80" height="20"></iframe>
+      <iframe src="https://ghbtns.com/github-btn.html?user=aegoroff&repo=egoroff.spb.ru&type=follow&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="150" height="20"></iframe>
+      <iframe src="https://ghbtns.com/github-btn.html?user=aegoroff&repo=egoroff.spb.ru&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="80" height="20"></iframe>
     </div>
       <br/>
       <p class="muted">&copy; 2002-2021 - Александр Егоров</p>
