--- a/static/src/style/signin.less
+++ b/static/src/style/signin.less
@@ -92,4 +92,4 @@
 
 .btn-facebook    { .btn-social(#3b5998); }
 .btn-google      { .btn-social(#dd4b39); }
-.btn-twitter     { .btn-social(#55acee); }
+.btn-github     { .btn-social(#444444); }
