--- a/templates/signin.html
+++ b/templates/signin.html
@@ -12,23 +12,19 @@
   <div class="row">
     <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
       <a class="btn btn-block btn-lg btn-social btn-google" href="{{google_signin_url}}" rel="nofollow">
-        <i class="fa fa-google-plus"></i>
+        <i class="fa fa-google"></i>
         Авторизоваться через Google
       </a>
+      <a class="btn btn-block btn-lg btn-social btn-github" href="{{github_signin_url}}" rel="nofollow">
+        <i class="fa fa-github"></i>
+        Авторизоваться через Github
+      </a>
 
-      {% if config.CONFIG_DB.has_facebook %}
         <a class="btn btn-block btn-lg btn-social btn-facebook" href="{{facebook_signin_url}}" rel="nofollow">
           <i class="fa fa-facebook"></i>
-          Войти с учетной записью Facebook
+          Авторизоваться через Facebook
         </a>
-      {% endif %}
 
-      {% if config.CONFIG_DB.has_twitter %}
-        <a class="btn btn-block btn-lg btn-social btn-twitter" href="{{twitter_signin_url}}" rel="nofollow">
-          <i class="fa fa-twitter"></i>
-          Войти с учетной записью Twitter
-        </a>
-      {% endif %}
     </div>
   </div>
 {% endblock %}
