github auth draft

--- a/templates/bit/user_menu.html
+++ b/templates/bit/user_menu.html
@@ -3,7 +3,7 @@
   <li class="dropdown">
     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
       <i class="fa fa-user"></i>
-      {{current_user.Email}}
+      {{current_user}}
       <b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
