--- a/templates/signin.html
+++ b/templates/signin.html
@@ -13,16 +13,16 @@
     <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
       <a class="btn btn-block btn-lg btn-social btn-google" href="{{google_signin_url}}" rel="nofollow">
         <i class="fa fa-google"></i>
-        Авторизоваться через Google
+        Авторизация через Google
       </a>
       <a class="btn btn-block btn-lg btn-social btn-github" href="{{github_signin_url}}" rel="nofollow">
         <i class="fa fa-github"></i>
-        Авторизоваться через Github
+        Авторизация через Github
       </a>
 
         <a class="btn btn-block btn-lg btn-social btn-facebook" href="{{facebook_signin_url}}" rel="nofollow">
           <i class="fa fa-facebook"></i>
-          Авторизоваться через Facebook
+          Авторизация через Facebook
         </a>
 
     </div>
