--- a/templates/bit/analytics.html
+++ b/templates/bit/analytics.html
@@ -5,7 +5,7 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', '{{ctx.conf.AnalyticsId}}', 'egoroff.spb.ru');
+      ga('create', '{{ctx.Conf.AnalyticsId}}', 'egoroff.spb.ru');
       ga('require', 'linkid', 'linkid.js');
       ga('send', 'pageview');
 
