--- a/ui/src/App.scss
+++ b/ui/src/App.scss
@@ -2,7 +2,7 @@ $font-family-sans-serif:  'Open Sans', Verdana, "Helvetica Neue", Helvetica, Ari
 $font-family-serif:       'Noto Serif', Georgia, "Times New Roman", Times, serif;
 $font-family-base: $font-family-serif;
 $headings-font-family:    $font-family-sans-serif;
-$breadcrumb-separator: "→";
+$breadcrumb-divider: "→";
 
 // Then import Bootstrap an BootstrapVue SCSS files (order is important)
 @import '~bootstrap';
