--- a/ui/src/App.scss
+++ b/ui/src/App.scss
@@ -179,3 +179,94 @@ pre.code {
   background-color: transparent;
   border: none;
 }
+
+// Signin
+
+$height-base: ($spacer + $line-height-lg * 2);
+$height-lg:   (floor($font-size-lg * $line-height-base) + $spacer * 2);
+$height-sm:   (floor($font-size-sm * 1.5) + $spacer * 2);
+$height-xs:   (floor($font-size-sm * 1.2) + $spacer + 1);
+
+.btn-social {
+  position: relative;
+  padding-left: $height-base + $spacer;
+  text-align: left;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  :first-child {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: $height-base;
+    line-height: ($height-base + 2);
+    font-size: 1.6em;
+    text-align: center;
+    border-right: 1px solid rgba(0, 0, 0, 0.2);
+  }
+  &.btn-lg {
+    padding-left: $height-lg + $spacer;
+    :first-child {
+      line-height: $height-lg;
+      width: $height-lg;
+      font-size: 1.8em;
+    }
+  }
+  &.btn-sm {
+    padding-left: $height-sm + $spacer;
+    :first-child {
+      line-height: $height-sm;
+      width: $height-sm;
+      font-size: 1.4em;
+    }
+  }
+  &.btn-xs {
+    padding-left: $height-xs + $spacer;
+    :first-child {
+      line-height: $height-xs;
+      width: $height-xs;
+      font-size: 1.2em;
+    }
+  }
+}
+
+.btn-social-icon {
+  //@include btn-social;
+  height: ($height-base + 2);
+  width: ($height-base + 2);
+  padding-left: 0;
+  padding-right: 0;
+  :first-child {
+    border: none;
+    text-align: center;
+    width: 100%!important;
+  }
+  &.btn-lg {
+    height: $height-lg;
+    width: $height-lg;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  &.btn-sm {
+    height: ($height-sm + 2);
+    width: ($height-sm + 2);
+    padding-left: 0;
+    padding-right: 0;
+  }
+  &.btn-xs {
+    height: ($height-xs + 2);
+    width: ($height-xs + 2);
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+@mixin btn-social($color-bg, $color: white){
+  background-color: $color-bg;
+  @include button-variant($color, $color-bg, rgba(0, 0, 0, 0.2));
+}
+
+.btn-facebook    { @include btn-social(#3b5998); }
+.btn-google      { @include btn-social(#dd4b39); }
+.btn-github     { @include btn-social(#444444); }
