--- a/ui/src/App.scss
+++ b/ui/src/App.scss
@@ -182,89 +182,132 @@ pre.code {
 
 // Signin
 
-$height-base: ($spacer + $line-height-lg * 2);
-$height-lg:   (floor($font-size-lg * $line-height-base) + $spacer * 2);
-$height-sm:   (floor($font-size-sm * 1.5) + $spacer * 2);
-$height-xs:   (floor($font-size-sm * 1.2) + $spacer + 1);
+$btn-padding-y: 0.5rem;
+$btn-padding-y-lg: 0.75rem;
+$btn-padding-y-sm: 0.25rem;
+$btn-line-height: 1.25;
+$btn-padding-x: 1rem;
+$btn-padding-x-lg: 1.5rem;
+$btn-padding-x-sm: 0.5rem;
+$padding-base-horizontal: $btn-padding-y;
+$padding-large-horizontal: $btn-padding-y-lg;
+$padding-small-horizontal: $btn-padding-y-sm;
+
+$bs-height-base: floor($btn-line-height + $btn-padding-x * 2);
+$bs-height-lg: floor($btn-line-height + $btn-padding-x-lg * 2);
+$bs-height-sm: floor($btn-line-height + $btn-padding-x-sm * 2);
+$bs-height-xs: floor($btn-line-height + $btn-padding-x-sm * 2);
 
 .btn-social {
   position: relative;
-  padding-left: $height-base + $spacer;
+  padding-left: $bs-height-base + $padding-base-horizontal;
   text-align: left;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  :first-child {
+
+  > :first-child {
     position: absolute;
     left: 0;
     top: 0;
     bottom: 0;
-    width: $height-base;
-    line-height: ($height-base + 2);
+    width: $bs-height-base;
+    line-height: $bs-height-base + 2;
     font-size: 1.6em;
     text-align: center;
     border-right: 1px solid rgba(0, 0, 0, 0.2);
   }
+
   &.btn-lg {
-    padding-left: $height-lg + $spacer;
-    :first-child {
-      line-height: $height-lg;
-      width: $height-lg;
+    padding-left: $bs-height-lg + $padding-large-horizontal;
+
+    > :first-child {
+      line-height: $bs-height-lg;
+      width: $bs-height-lg;
       font-size: 1.8em;
     }
   }
+
   &.btn-sm {
-    padding-left: $height-sm + $spacer;
-    :first-child {
-      line-height: $height-sm;
-      width: $height-sm;
+    padding-left: $bs-height-sm + $padding-small-horizontal;
+
+    > :first-child {
+      line-height: $bs-height-sm;
+      width: $bs-height-sm;
       font-size: 1.4em;
     }
   }
+
   &.btn-xs {
-    padding-left: $height-xs + $spacer;
-    :first-child {
-      line-height: $height-xs;
-      width: $height-xs;
+    padding-left: $bs-height-xs + $padding-small-horizontal;
+
+    > :first-child {
+      line-height: $bs-height-xs;
+      width: $bs-height-xs;
       font-size: 1.2em;
     }
   }
 }
 
+.btn-social {
+  > :first-child {
+    line-height: $btn-line-height !important;
+    padding-top: $btn-padding-y !important;
+    padding-bottom: $btn-padding-y !important;
+    font-size: inherit !important;
+  }
+
+  &.btn-lg {
+    > :first-child {
+      line-height: $btn-line-height !important;
+      padding-top: $btn-padding-y-lg !important;
+      padding-bottom: $btn-padding-y-lg !important;
+      font-size: inherit !important;
+    }
+  }
+}
+
 .btn-social-icon {
-  //@include btn-social;
-  height: ($height-base + 2);
-  width: ($height-base + 2);
-  padding-left: 0;
-  padding-right: 0;
-  :first-child {
+  @extend .btn-social;
+
+  height: $bs-height-base;
+  width: $bs-height-base;
+  padding: 0;
+
+  > :first-child {
     border: none;
     text-align: center;
-    width: 100%!important;
+    width: 100% !important;
   }
+
   &.btn-lg {
-    height: $height-lg;
-    width: $height-lg;
+    height: $bs-height-lg;
+    width: $bs-height-lg;
     padding-left: 0;
     padding-right: 0;
   }
+
   &.btn-sm {
-    height: ($height-sm + 2);
-    width: ($height-sm + 2);
+    height: $bs-height-sm;
+    width: $bs-height-sm;
     padding-left: 0;
     padding-right: 0;
   }
+
   &.btn-xs {
-    height: ($height-xs + 2);
-    width: ($height-xs + 2);
+    height: $bs-height-xs;
+    width: $bs-height-xs;
     padding-left: 0;
     padding-right: 0;
   }
 }
 
-@mixin btn-social($color-bg, $color: white){
-  background-color: $color-bg;
-  @include button-variant($color, $color-bg, rgba(0, 0, 0, 0.2));
+@mixin btn-social($color-bg, $color: null) {
+  @if $color {
+    color: $color;
+  }
+
+  @include button-variant($color-bg, $color-bg);
 }
 
 .btn-facebook    { @include btn-social(#3b5998); }
