--- a/ui/src/App.scss
+++ b/ui/src/App.scss
@@ -37,6 +37,12 @@ body {
   }
 }
 
+.shortDate {
+  font-weight: bold;
+  font-family: $headings-font-family;
+  color: $gray-700;
+}
+
 .img-error {
   max-width: 100%;
   margin: auto;
